--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <h2>Secure Parking Pass</h2>
-    <p>Click below to open your SpotHero pass with the "Request Cancellation" button removed.</p>
+    <p>Click below to open your SpotHero pass </p>
     <button onclick="openPass()">Open Parking Pass</button>
 </body>
 </html>
