--- a/index.html
+++ b/index.html
@@ -7,23 +7,18 @@
     <script>
         function openPass() {
             let newWindow = window.open("https://spothero.com/parking-pass/96363618?key=f83628ee78d4c13913f3e468a49759058c852d8420d315cfb3f7e4311b0b4748&_branch_match_id=1401690758211250180&utm_source=confirmation_email&utm_campaign=parking_pass&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXLy7IL8lILcrXSywo0MvJzMvWLzcNyshwKys1DUqyrytKTUstKsrMS49PKsovL04tsnXOKMrPTQUAbzUFCT8AAAA%3D", "_blank");
-
             setTimeout(() => {
                 try {
                     let cancelButton = newWindow.document.querySelector('[data-testid="CancelReservation-button-delete"]');
-                    if (cancelButton) {
-                        cancelButton.style.display = "none"; // Hide the button
-                    }
-                } catch (error) {
-                    console.error("Could not modify the new window's content. Browser security restrictions may apply.");
-                }
+                    if (cancelButton) {cancelButton.style.display = "none"; // Hide the button}
+                } catch (error) {console.error("Could not modify the new window's content. Browser security restrictions may apply.");}
             }, 3000); // Give time for the page to load
         }
     </script>
 </head>
 <body>
     <h2>Secure Parking Pass</h2>
-    <p>Click below to open your SpotHero pass </p>
+    <p>Click below to open your SpotHero pass</p>
     <button onclick="openPass()">Open Parking Pass</button>
 </body>
 </html>
